--- a/src/ViewComponents/QuestionsView/QuestionsView.css
+++ b/src/ViewComponents/QuestionsView/QuestionsView.css
@@ -8,7 +8,7 @@
 
 .questions-view__container {
   width: 60vw;
-  min-height: 70vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
